--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -5,13 +5,13 @@ layout: default
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
-      <h1 class="header center orange-text">{{ site.title }}</h1>
+      <h1 class="header center blue-text">{{ site.title }}</h1>
       <div class="row center">
         <h5 class="header col s12 light">{{ content }}</h5>
       </div>
 
       <div class="row center">
-        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange">Get Started</a>
+        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light red">Get Started</a>
       </div>
       <br><br>
 
