--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -1,4 +1,4 @@
-<nav class="light-blue lighten-1" role="navigation">
+<nav class="orange" role="navigation">
   <div class="nav-wrapper container">
     <a id="logo-container" class="brand-logo" href="{{ "/" | relative_url }}">
       <img src="{{ "/assets/img/logo.png" }}" alt="Logo">
@@ -7,7 +7,7 @@
     {% assign page_paths = site.header_pages | default: default_paths %}
 
           <ul class="right hide-on-med-and-down">
-            <li><a href="{{ "/" | relative_url }}">Home </a></li>
+            <li><a href="{{ "/" | relative_url }}">Inicio </a></li>
             {% if page_paths %}
                 {% for path in page_paths %}
                     {% assign my_page = site.pages | where: "path", path | first %}
@@ -19,7 +19,7 @@
           </ul>
 
           <ul id="nav-mobile" class="side-nav">
-            <li><a href="#">Home</a></li>
+            <li><a href="#">Inicio</a></li>
                             {% if page_paths %}
                 {% for path in page_paths %}
                     {% assign my_page = site.pages | where: "path", path | first %}
