Adds banner based on images

--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -2,20 +2,23 @@
 layout: default
 ---
 
-  <div class="section no-pad-bot" id="index-banner">
-    <div class="container">
-      <br><br>
-      <h1 class="header center indigo-text">{{ site.title }}</h1>
-      <div class="row center">
-        <h5 class="header col s12 light">{{ content }}</h5>
-      </div>
+  <div class="parallax-container" id="index-banner">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <br><br>
+        <h2 class="header center white-text">{{ site.title }}</h2>
+        <div class="row center">
+          <h5 class="header col s12 light">{{ content }}</h5>
+        </div>
 
-      <div class="row center">
-        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light red">Get Started</a>
-      </div>
-      <br><br>
+        <div class="row center">
+          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light red">ENTRAR</a>
+        </div>
+        <br><br>
 
+      </div>
     </div>
+    <div class="parallax"><img src="{{ "/assets/img/jammpaz_collage.png"    }}" alt="Jammpaz collage"/></div>
   </div>
 
   <div class="container">
