Creates ecceju website based on jammpaz website

--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -7,18 +7,14 @@ layout: default
       <div class="container">
         <br><br>
         <h2 class="header center white-text">{{ site.title }}</h2>
+        <br><br>
         <div class="row center">
-          <h5 class="header col s12 light">{{ content }}</h5>
-        </div>
-
-        <div class="row center">
-          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light red">ENTRAR</a>
+          <a href="#" class="btn-large waves-effect waves-light red">INSCRÍBETE</a>
         </div>
         <br><br>
-
       </div>
     </div>
-    <div class="parallax"><img src="{{ "/assets/img/jammpaz_collage.png"    }}" alt="Jammpaz collage"/></div>
+    <div class="parallax"><img src="{{ "/assets/img/image_1.jpg" }}" alt="ECCE RCC"/></div>
   </div>
 
   <div class="container">
@@ -27,11 +23,17 @@ layout: default
       <!--   Icon Section   -->
       <div class="row">
         <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center indigo-text"><i class="material-icons">announcement</i></h2>
-            <h5 class="center">Evangelización</h5>
-
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+          <div class="card">
+            <div class="card-image">
+              <img src="{{ "/assets/img/bigger_logo.png" }}">
+            </div>
+            <div class="card-content">
+              <p>Ahora puedes acceder a la programación del evento, como por ejemplo las charlas y sus predicadores,
+              horarios de la Santa Misa, etc.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">Ver itinerario</a>
+            </div>
           </div>
         </div>
 
