--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -1,25 +1,33 @@
-<nav class="orange" role="navigation">
+<nav class="white" role="navigation">
   <div class="nav-wrapper container">
     <a id="logo-container" class="brand-logo" href="{{ "/" | relative_url }}">
-      <img src="{{ "/assets/img/logo.png" }}" alt="Logo">
+      <img src="{{ "/assets/img/logo.png" }}" class="responsive-img" alt="Logo">
     </a>
     {% assign default_paths = site.pages | map: "path" %}
     {% assign page_paths = site.header_pages | default: default_paths %}
 
           <ul class="right hide-on-med-and-down">
-            <li><a href="{{ "/" | relative_url }}">Inicio </a></li>
+            <li>
+              <a href="{{ "/" | relative_url }}">
+                <span class="red-text text-darken-1">{{ site.home }}</span>
+              </a>
+            </li>
             {% if page_paths %}
                 {% for path in page_paths %}
                     {% assign my_page = site.pages | where: "path", path | first %}
                     {% if my_page.title %}
-                    <li><a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a></li>
+                    <li>
+                      <a href="{{ my_page.url | relative_url }}">
+                        <span class="red-text text-darken-1">{{ my_page.title | escape }}</span>
+                      </a>
+                    </li>
                     {% endif %}
                 {% endfor %}
             {% endif %}
           </ul>
 
           <ul id="nav-mobile" class="side-nav">
-            <li><a href="/about">Inicio</a></li>
+            <li><a href="/about">{{ site.home }}</a></li>
                             {% if page_paths %}
                 {% for path in page_paths %}
                     {% assign my_page = site.pages | where: "path", path | first %}
