--- a/website/_layouts/post.html
+++ b/website/_layouts/post.html
@@ -17,7 +17,7 @@ layout: default
           {% endif %}</p>
       </header>
 
-      <div class="post-content" itemprop="articleBody">
+      <div class="post-content white" itemprop="articleBody">
         {{ content }}
       </div>
 
