--- a/website/_includes/footer.html
+++ b/website/_includes/footer.html
@@ -2,37 +2,39 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+          <h5 class="white-text">{{ site.title }}</h5>
+          <p class="grey-text text-lighten-4">{{ site.description }}</p>
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
+          <h5 class="white-text">Enlaces de interés</h5>
           <ul>
-            <li><a class="white-text" href="/about">Link 1</a></li>
-            <li><a class="white-text" href="/about">Link 2</a></li>
-            <li><a class="white-text" href="/about">Link 3</a></li>
-            <li><a class="white-text" href="/about">Link 4</a></li>
+            <li><a class="white-text" href="/programacion">Programación</a></li>
+            <li><a class="white-text" href="/ministerios">Ministerios</a></li>
+            <li><a class="white-text" href="/musica">Música</a></li>
+            <li><a class="white-text" href="/inscripciones">Inscripciones</a></li>
+            <li><a class="white-text" href="/acerca-de">Acerca de</a></li>
           </ul>
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
+          <h5 class="white-text">Contactos</h5>
           <ul>
-            <li><a class="white-text" href="/about">Link 1</a></li>
-            <li><a class="white-text" href="/about">Link 2</a></li>
-            <li><a class="white-text" href="/about">Link 3</a></li>
-            <li><a class="white-text" href="/about">Link 4</a></li>
+            <li><a class="white-text" href="https://www.facebook.com/{{ site.facebook_username }}">Facebook</a></li>
+            <li><a class="white-text" href="https://www.instagram.com/{{ site.instagram_username }}">Instagram</a></li>
           </ul>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
         <div class="container">
-            <div>
-                Made by <a target="_blank" class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-                <span style="text-align: right; float: right">
-                Copyright © 2018 <a href="http://www.panoramedia.it" class="orange-text text-lighten-3">Jammpaz</a>. Powered by <a target="_blank" href="http://jekyllrb.com/" class="orange-text text-lighten-3">Jekyll</a>
-                </span>
+          <div class="row">
+            <div class="col l6 s12 m6">
+              Made by <a target="_blank" class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
             </div>
+
+            <div class="col l6 s12 m6">
+                Copyright © 2018 <a href="http://www.panoramedia.it" class="orange-text text-lighten-3">Jammpaz, Quito-Ecuador</a>. Powered by <a target="_blank" href="http://jekyllrb.com/" class="orange-text text-lighten-3">Jekyll</a>
+            </div>
+          </div>
         </div>
     </div>
 </footer>
