--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "es" }}">
   {% include head.html %}
-  <body>
+    <body class="grey lighten-4">
     {% include header.html %}
         {{ content }}
     {% include footer.html %}
