--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -25,7 +25,7 @@ layout: default
         <div class="col s12 m4">
           <div class="card">
             <div class="card-image">
-              <img src="{{ "/assets/img/bigger_logo.png" }}">
+              <img src="{{ "/assets/img/bigger_logo.png" }}" alt="ECCEJU logo">
               <span class="card-title red-text text-darken-2">Itinerario</span>
             </div>
             <div class="card-content">
@@ -41,7 +41,7 @@ layout: default
         <div class="col s12 m4">
           <div class="card">
             <div class="card-image">
-              <img src="{{ "/assets/img/danza_1.jpg" }}">
+              <img src="{{ "/assets/img/danza_1.jpg" }}" alt="Danza">
               <span class="card-title">Ministerios</span>
             </div>
             <div class="card-content">
@@ -57,7 +57,7 @@ layout: default
         <div class="col s12 m4">
           <div class="card">
             <div class="card-image">
-              <img src="{{ "/assets/img/music_1.jpg" }}">
+              <img src="{{ "/assets/img/music_1.jpg" }}" alt="Musica">
               <span class="card-title">Música</span>
             </div>
             <div class="card-content">
