--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -1,42 +1,61 @@
+{% assign default_paths = site.pages | map: "path" %}
+{% assign page_paths = site.header_pages | default: default_paths %}
+
+<ul id="dropdown-menu" class="dropdown-content">
+  {% if page_paths %}
+      {% for path in page_paths %}
+          {% assign my_page = site.pages | where: "path", path | first %}
+          {% if my_page.title %}
+          <li>
+            <a href="{{ my_page.url | relative_url }}">
+              <span class="red-text text-darken-1">{{ my_page.title | escape }}</span>
+            </a>
+          </li>
+          {% endif %}
+      {% endfor %}
+  {% endif %}
+</ul>
+
 <nav class="white" role="navigation">
   <div class="nav-wrapper container">
     <a id="logo-container" class="brand-logo" href="{{ "/" | relative_url }}">
       <img src="{{ "/assets/img/logo.png" }}" class="responsive-img" alt="Logo">
     </a>
-    {% assign default_paths = site.pages | map: "path" %}
-    {% assign page_paths = site.header_pages | default: default_paths %}
 
-          <ul class="right hide-on-med-and-down">
-            <li>
-              <a href="{{ "/" | relative_url }}">
-                <span class="red-text text-darken-1">{{ site.home }}</span>
-              </a>
-            </li>
-            {% if page_paths %}
-                {% for path in page_paths %}
-                    {% assign my_page = site.pages | where: "path", path | first %}
-                    {% if my_page.title %}
-                    <li>
-                      <a href="{{ my_page.url | relative_url }}">
-                        <span class="red-text text-darken-1">{{ my_page.title | escape }}</span>
-                      </a>
-                    </li>
-                    {% endif %}
-                {% endfor %}
-            {% endif %}
-          </ul>
+    <ul class="right hide-on-med-and-down">
+      <li>
+        <a href="{{ "/" | relative_url }}">
+          <span class="red-text text-darken-1">{{ site.home }}</span>
+          <i class="material-icons right icon-red">home</i>
+        </a>
+      </li>
+      <li>
+        <a class="dropdown-button" data-constrainWidth="false" data-activates="dropdown-menu">
+          <span class="red-text text-darken-1">Menu</span>
+          <i class="material-icons right icon-red">arrow_drop_down</i>
+        </a>
+      </li>
+    </ul>
 
-          <ul id="nav-mobile" class="side-nav">
-            <li><a href="{{ "/" | relative_url }}">{{ site.home }}</a></li>
-                            {% if page_paths %}
-                {% for path in page_paths %}
-                    {% assign my_page = site.pages | where: "path", path | first %}
-                    {% if my_page.title %}
-                    <li><a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a></li>
-                    {% endif %}
-                {% endfor %}
-            {% endif %}
-          </ul>
+    <ul id="nav-mobile" class="side-nav">
+      <li>
+        <a href="{{ "/" | relative_url }}">
+          <span class="red-text text-darken-1">{{ site.home }}</span>
+        </a>
+      </li>
+                      {% if page_paths %}
+          {% for path in page_paths %}
+              {% assign my_page = site.pages | where: "path", path | first %}
+              {% if my_page.title %}
+              <li>
+                <a href="{{ my_page.url | relative_url }}">
+                  <span class="red-text text-darken-1">{{ my_page.title | escape }}</span>
+                </a>
+              </li>
+              {% endif %}
+          {% endfor %}
+      {% endif %}
+    </ul>
 
       <a href="/acerca-de" data-activates="nav-mobile" class="button-collapse"><i class="material-icons icon-red">menu</i></a>
     </div>
