Reorganize pages structure

--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -57,6 +57,6 @@
       {% endif %}
     </ul>
 
-      <a href="/acerca-de" data-activates="nav-mobile" class="button-collapse"><i class="material-icons icon-red">menu</i></a>
+      <a href="/about/" data-activates="nav-mobile" class="button-collapse"><i class="material-icons icon-red">menu</i></a>
     </div>
 </nav>
