--- a/website/_includes/footer.html
+++ b/website/_includes/footer.html
@@ -8,11 +8,11 @@
         <div class="col l3 s12">
           <h5 class="white-text">Enlaces de interés</h5>
           <ul>
-            <li><a class="white-text" href="/programacion">Programación</a></li>
-            <li><a class="white-text" href="/ministerios">Ministerios</a></li>
-            <li><a class="white-text" href="/musica">Música</a></li>
-            <li><a class="white-text" href="/inscripciones">Inscripciones</a></li>
-            <li><a class="white-text" href="/acerca-de">Acerca de</a></li>
+            <li><a class="white-text" href="/programacion/">Programación</a></li>
+            <li><a class="white-text" href="/ministerios/">Ministerios</a></li>
+            <li><a class="white-text" href="/musica/">Música</a></li>
+            <li><a class="white-text" href="/inscripciones/">Inscripciones</a></li>
+            <li><a class="white-text" href="/about/">Acerca de</a></li>
           </ul>
         </div>
         <div class="col l3 s12">
