Adds inscripciones url

--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -9,7 +9,7 @@ layout: default
         <h2 class="header center white-text">{{ site.title }}</h2>
         <br><br>
         <div class="row center">
-          <a href="/inscripciones" class="btn-large waves-effect waves-light red">Inscripciones</a>
+          <a href="{{ site.inscripciones_url }}" class="btn-large waves-effect waves-light red">Inscripciones</a>
         </div>
         <br><br>
       </div>
