Removes temporary content and modifies urls

--- a/website/_includes/footer.html
+++ b/website/_includes/footer.html
@@ -32,7 +32,7 @@
             </div>
 
             <div class="col l6 s12 m6">
-                Copyright © 2018 <a href="http://www.panoramedia.it" class="orange-text text-lighten-3">Jammpaz, Quito-Ecuador</a>. Powered by <a target="_blank" href="http://jekyllrb.com/" class="orange-text text-lighten-3">Jekyll</a>
+                Copyright © 2018 <a class="orange-text text-lighten-3">Jammpaz, Quito-Ecuador</a>. Powered by <a target="_blank" href="http://jekyllrb.com/" class="orange-text text-lighten-3">Jekyll</a>
             </div>
           </div>
         </div>
