Upgrades some links and configurations

--- a/website/_includes/footer.html
+++ b/website/_includes/footer.html
@@ -11,7 +11,7 @@
             <li><a class="white-text" href="/programacion/">Programación</a></li>
             <li><a class="white-text" href="/ministerios/">Ministerios</a></li>
             <li><a class="white-text" href="/musica/">Música</a></li>
-            <li><a class="white-text" href="/inscripciones/">Inscripciones</a></li>
+            <li><a class="white-text" href="{{ site.inscripciones_url }}">Inscripciones</a></li>
             <li><a class="white-text" href="/about/">Acerca de</a></li>
           </ul>
         </div>
