Adds preventa camiseta card

--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -25,6 +25,20 @@ layout: default
         <div class="col s12 m4">
           <div class="card">
             <div class="card-image">
+              <img src="{{ "/assets/img/camisetas.png" }}" alt="Camiseta">
+            </div>
+            <div class="card-content">
+              <p>Ahora puedes solicitar preventa de la camiseta official del encuentro. Para ello haz clic en el siguiente enlace: </p>
+            </div>
+            <div class="card-action">
+              <a href="https://ecceju-inscripcion-qa.herokuapp.com/preventa/new">Ir a preventa</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-image">
               <img src="{{ "/assets/img/bigger_logo.png" }}" alt="ECCEJU logo">
               <span class="card-title red-text text-darken-2">Itinerario</span>
             </div>
