Changes preventa url, changes programacion and deploys to prod

--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -31,7 +31,7 @@ layout: default
               <p>Ahora puedes solicitar preventa de la camiseta official del encuentro. Para ello haz clic en el siguiente enlace: </p>
             </div>
             <div class="card-action">
-              <a href="https://ecceju-inscripcion-qa.herokuapp.com/preventa/new">Ir a preventa</a>
+              <a href="{{ site.inscripciones_url }}/preventa/new">Ir a preventa</a>
             </div>
           </div>
         </div>
