Changes banner image to ecceju gye

--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -14,7 +14,7 @@ layout: default
         <br><br>
       </div>
     </div>
-    <div class="parallax"><img src="{{ "/assets/img/image_1.jpg" }}" alt="ECCE RCC"/></div>
+    <div class="parallax"><img src="{{ "/assets/img/ecce_gye.jpg" }}" alt="ECCE RCC"/></div>
   </div>
 
   <div class="container">
