Removes button inscripciones and instead put a card

--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -5,13 +5,8 @@ layout: default
   <div class="parallax-container" id="index-banner">
     <div class="section no-pad-bot">
       <div class="container">
-        <br><br>
+        <br/>
         <h2 class="header center white-text">{{ site.title }}</h2>
-        <br><br>
-        <div class="row center">
-          <a href="{{ site.inscripciones_url }}" class="btn-large waves-effect waves-light red">Inscripciones</a>
-        </div>
-        <br><br>
       </div>
     </div>
     <div class="parallax"><img src="{{ "/assets/img/ecce_gye.jpg" }}" alt="ECCE RCC"/></div>
@@ -39,15 +34,15 @@ layout: default
         <div class="col s12 m4">
           <div class="card">
             <div class="card-image">
-              <img src="{{ "/assets/img/bigger_logo.png" }}" alt="ECCEJU logo">
-              <span class="card-title red-text text-darken-2">Itinerario</span>
+              <img src="{{ "/assets/img/inscripciones.jpg" }}" alt="ECCEJU Inscripciones">
+              <span class="card-title red-text text-darken-2">Inscripciones</span>
             </div>
             <div class="card-content">
-              <p>Ahora puedes acceder a la programación del evento, como por ejemplo las charlas y sus predicadores,
-              horarios de la Santa Misa, etc.</p>
+              <p>Para inscribirte requires la ayuda de el/la líder juvenil de cada localidad.
+              Para acceder a las inscripciones haz click en el siguiente enlace:</p>
             </div>
             <div class="card-action">
-              <a href="/programacion">Ver itinerario</a>
+              <a href="{{ site.inscripciones_url }}">Ir a inscripciones</a>
             </div>
           </div>
         </div>
@@ -84,6 +79,21 @@ layout: default
           </div>
         </div>
 
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-image">
+              <img src="{{ "/assets/img/bigger_logo.png" }}" alt="ECCEJU logo">
+              <span class="card-title red-text text-darken-2">Itinerario</span>
+            </div>
+            <div class="card-content">
+              <p>Ahora puedes acceder a la programación del evento, como por ejemplo las charlas y sus predicadores,
+              horarios de la Santa Misa, etc.</p>
+            </div>
+            <div class="card-action">
+              <a href="/programacion">Ver itinerario</a>
+            </div>
+          </div>
+        </div>
       </div>
 
     </div>
