Adds more content into inscripciones card

--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -39,7 +39,12 @@ layout: default
             </div>
             <div class="card-content">
               <p>Para inscribirte requires la ayuda de el/la líder juvenil de cada localidad.
-              Para acceder a las inscripciones haz click en el siguiente enlace:</p>
+              Para acceder a las inscripciones haz click en el enlace "IR A INSCRIPCIONES".
+              </p>
+              <p>
+              Si no sabes quién es el/la líder de tu comunidad o simplemente no formas parte de ningún grupo
+              pero deseas inscribirte, lo puedes hacer enviando un correo a <b>stefany8905@hotmail.com</b>.
+              </p>
             </div>
             <div class="card-action">
               <a href="{{ site.inscripciones_url }}">Ir a inscripciones</a>
