Upgrades camisetas image

--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -20,7 +20,7 @@ layout: default
         <div class="col s12 m4">
           <div class="card">
             <div class="card-image">
-              <img src="{{ "/assets/img/camisetas.png" }}" alt="Camiseta">
+              <img src="{{ "/assets/img/camisetas.jpg" }}" alt="Camiseta">
             </div>
             <div class="card-content">
               <p>Ahora puedes solicitar preventa de la camiseta official del encuentro. Para ello haz clic en el siguiente enlace: </p>
