Upgrades inscripciones card info and deletes programacion data

--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -20,6 +20,34 @@ layout: default
         <div class="col s12 m4">
           <div class="card">
             <div class="card-image">
+              <img src="{{ "/assets/img/inscripciones.jpg" }}" alt="ECCEJU Inscripciones">
+              <span class="card-title red-text text-darken-2">Inscripciones</span>
+            </div>
+            <div class="card-content">
+              <b>Inscripciones Quito</b> <br/>
+              <p>Si eres de Quito tienes dos opciones:</p>
+              <ol>
+                <li>Acercarse a la RCC Quito (Av. Bogotá y México), llenar el formulario de inscripción y pagar el valor correspondiente.</li>
+                <li>Llenar tu formulario en línea en el siguiente <a href="https://docs.google.com/forms/d/e/1FAIpQLSfBLxRW-eGTn2FM9UrLyEfjbeUw5WsNp0cGJhiFWJkvAn5-GA/viewform?usp=sf_link" alt="Enlace a Inscripcion Quito">enlace</a>, hacer depósito o transferencia a la cuenta de la Pastoral Quito (ver en el formulario), y enviar el comprobante de pago al número <b>0992530457</b> o vía <a href="https://www.facebook.com/eccejuquito2018/" alt="Facebook ECCEJU 2018">Facebook</a>.</li>
+              </ol>
+
+              <b>Inscripciones a Nivel Nacional</b>
+              <p>Inscribirse con el/la líder local. El líder local debe recaudar todas las inscripciones, hacer el depósito y subir la información a la página de <a href="https://inscripciones.ecceju.rccec.org" alt="RCCEC">inscripciones</a>.
+              </p>
+              <br/>
+
+              <b>Inscripciones Individuales</b>
+              <p>Si eres de una localidad donde no hay RCC juvenil o eres de otro movimiento debes contactarte con la hermana <b>Beatriz</b> al <b>0988624163</b>, y ella te inscribirá. En este caso el depósito o transferencia deberás hacerlo a la Cuenta de la Pastoral Juvenil RCC Quito (a la cuenta de Pastoral Quito).</p>
+
+              <br/>
+              <p>Para mayor información contactarse a <b>0985345527</b>.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-image">
               <img src="{{ "/assets/img/camisetas.jpg" }}" alt="Camiseta">
             </div>
             <div class="card-content">
@@ -31,26 +59,6 @@ layout: default
           </div>
         </div>
 
-        <div class="col s12 m4">
-          <div class="card">
-            <div class="card-image">
-              <img src="{{ "/assets/img/inscripciones.jpg" }}" alt="ECCEJU Inscripciones">
-              <span class="card-title red-text text-darken-2">Inscripciones</span>
-            </div>
-            <div class="card-content">
-              <p>Para inscribirte requires la ayuda de el/la líder juvenil de cada localidad.
-              Para acceder a las inscripciones haz click en el enlace "IR A INSCRIPCIONES".
-              </p>
-              <p>
-              Si no sabes quién es el/la líder de tu comunidad o simplemente no formas parte de ningún grupo
-              pero deseas inscribirte, lo puedes hacer enviando un correo a <b>stefany8905@hotmail.com</b>.
-              </p>
-            </div>
-            <div class="card-action">
-              <a href="{{ site.inscripciones_url }}">Ir a inscripciones</a>
-            </div>
-          </div>
-        </div>
 
         <div class="col s12 m4">
           <div class="card">
@@ -80,22 +88,6 @@ layout: default
             </div>
             <div class="card-action">
               <a href="/musica">Ver más</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="card">
-            <div class="card-image">
-              <img src="{{ "/assets/img/bigger_logo.png" }}" alt="ECCEJU logo">
-              <span class="card-title red-text text-darken-2">Itinerario</span>
-            </div>
-            <div class="card-content">
-              <p>Ahora puedes acceder a la programación del evento, como por ejemplo las charlas y sus predicadores,
-              horarios de la Santa Misa, etc.</p>
-            </div>
-            <div class="card-action">
-              <a href="/programacion">Ver itinerario</a>
             </div>
           </div>
         </div>
