--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -2,15 +2,7 @@
 layout: default
 ---
 
-  <div class="parallax-container" id="index-banner">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <br/>
-        <h1 class="header center white-text">{{ site.title }}</h1>
-      </div>
-    </div>
-    <div class="parallax"><img src="{{ "/assets/img/ecce_gye.jpg" }}" alt="ECCE RCC"/></div>
-  </div>
+  {% include slider.html %}
 
   <div class="container">
     <div class="section">
