--- a/website/_sass/main.scss
+++ b/website/_sass/main.scss
@@ -12,6 +12,14 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: normal;
 }
 
+.header-shadow {
+  text-shadow: 5px 5px #000000;
+}
+
+.text-shadow {
+  text-shadow: 3px 2px #000000;
+}
+
 body {
   font-family: $font-family-content, $default-font-family-content;
 }
