Updates inscripciones individuales info

--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -29,7 +29,7 @@ layout: default
               <br/>
 
               <b>Inscripciones Individuales</b>
-              <p>Si eres de una localidad donde no hay RCC juvenil o eres de otro movimiento debes contactarte con la hermana <b>Beatriz</b> al <b>0988624163</b>, y ella te inscribirá. En este caso el depósito o transferencia deberás hacerlo a la Cuenta de la Pastoral Juvenil RCC Quito (a la cuenta de Pastoral Quito).</p>
+              <p>Si eres de una localidad donde no hay RCC juvenil o eres de otro movimiento debes contactarte con la hermana <b>Paulina Sandovalin</b> al <b>0999837842</b>, o al correo <b>ofnacecrcc@hotmail.com</b>, y ella te inscribirá. En este caso el depósito o transferencia deberás hacerlo a la Cuenta de la Pastoral Juvenil RCC Quito (a la cuenta de Pastoral Quito).</p>
 
               <br/>
               <p>Para mayor información contactarse a <b>0985345527</b>.</p>
