--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -32,7 +32,7 @@ layout: default
               <p>Si eres de una localidad donde no hay RCC juvenil o eres de otro movimiento debes contactarte con la hermana <b>Paulina Sandovalin</b> al <b>0999837842</b>, o al correo <b>ofnacecrcc@hotmail.com</b>, y ella te inscribirá. En este caso el depósito o transferencia deberás hacerlo a la Cuenta de la Pastoral Juvenil RCC Quito (a la cuenta de Pastoral Quito).</p>
 
               <br/>
-              <p>Para mayor información contactarse a <b>0985345527</b>.</p>
+              <p>Para mayor información contactarse a los siguientes números: <b>0999837842</b>, <b>0985345527</b>.</p>
             </div>
           </div>
         </div>
@@ -93,7 +93,7 @@ layout: default
         <section>
           <h5>Noticias</h5>
           <ul class="collection">
-            {% for post in site.posts %}.
+            {% for post in site.posts %}
             <li class="collection-item avatar">
               {% assign date_format = site.minima.date_format | default: "%m/%d" %}
               <div class="date-post">{{ post.date | date: date_format }}</div>
