Upgrade inscripciones info

--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -12,31 +12,52 @@ layout: default
         <div class="col s12 m4">
           <div class="card">
             <div class="card-image">
-              <img src="{{ "/assets/img/inscripciones.jpg" }}" alt="ECCEJU Inscripciones">
-              <span class="card-title red-text text-darken-2">Inscripciones</span>
+              <img src="{{ "/assets/img/inscripciones_quito.jpg" }}" alt="ECCEJU Inscripciones Quito">
             </div>
             <div class="card-content">
-              <b>Inscripciones Quito</b> <br/>
+              <h5>Inscripciones Quito</h5>
               <p>Si eres de Quito tienes dos opciones:</p>
               <ol>
                 <li>Acercarse a la RCC Quito (Av. Bogotá y México), llenar el formulario de inscripción y pagar el valor correspondiente.</li>
                 <li>Llenar tu formulario en línea en el siguiente <a href="https://docs.google.com/forms/d/e/1FAIpQLSfBLxRW-eGTn2FM9UrLyEfjbeUw5WsNp0cGJhiFWJkvAn5-GA/viewform?usp=sf_link" alt="Enlace a Inscripcion Quito">enlace</a>, hacer depósito o transferencia a la cuenta de la Pastoral Quito (ver en el formulario), y enviar el comprobante de pago al número <b>0992530457</b> o vía <a href="https://www.facebook.com/eccejuquito2018/" alt="Facebook ECCEJU 2018">Facebook</a>.</li>
               </ol>
-
-              <b>Inscripciones a Nivel Nacional</b>
-              <p>Inscribirse con el/la líder local. El líder local debe recaudar todas las inscripciones, hacer el depósito y subir la información a la página de <a href="https://inscripciones.ecceju.rccec.org" alt="RCCEC">inscripciones</a>.
-              </p>
-              <br/>
-
-              <b>Inscripciones Individuales</b>
-              <p>Si eres de una localidad donde no hay RCC juvenil o eres de otro movimiento debes contactarte con la hermana <b>Paulina Sandovalin</b> al <b>0999837842</b>, o al correo <b>ofnacecrcc@hotmail.com</b>, y ella te inscribirá. En este caso el depósito o transferencia deberás hacerlo a la Cuenta de la Pastoral Juvenil RCC Quito (a la cuenta de Pastoral Quito).</p>
-
-              <br/>
-              <p>Para mayor información contactarse a los siguientes números: <b>0999837842</b>, <b>0985345527</b>.</p>
             </div>
           </div>
         </div>
 
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-image">
+              <img src="{{ "/assets/img/inscripciones_nacional.jpg" }}" alt="ECCEJU Inscripciones a Nivel Nacional">
+            </div>
+            <div class="card-content">
+              <h5>Inscripciones a Nivel Nacional</h5>
+              <p>Inscribirse con el/la líder local. El líder local debe recaudar todas las inscripciones, hacer el depósito y subir la información a la página de inscripciones.
+              </p>
+            </div>
+            <div class="card-action">
+              <a href="{{ site.inscripciones_url }}">Ir a página inscripciones</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-image">
+              <img src="{{ "/assets/img/inscripciones.jpg" }}" alt="ECCEJU Inscripciones Individuales">
+            </div>
+            <div class="card-content">
+              <h5>Inscripciones Individuales</h5>
+              <p>Si eres de una localidad donde no hay RCC juvenil o eres de otro movimiento debes contactarte con la hermana <b>Paulina Sandovalin</b> al <b>0999837842</b>, o al correo <b>ofnacecrcc@hotmail.com</b>, y ella te inscribirá. En este caso el depósito o transferencia deberás hacerlo a la Cuenta Corriente <b>2100026357</b> del <b>Banco Pichincha</b> a nombre de la <b>Renovacion Carismática Católica</b></p>
+
+              <br/>
+              <p>Para mayor información contactarse al <b>0999837842</b>.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
         <div class="col s12 m4">
           <div class="card">
             <div class="card-image">
